# weather-cli

./: Cargo.toml
src/: README.md  main.rs
