[package]
name = "weather-cli"
version = "0.1.0"
authors = ["ChristopherBiscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde = "1.0.126"
serde_json = "1.0.64"
